--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "classnames": "^2.2.5",
+    "faker": "^3.1.0",
     "fastclick": "^1.0.6",
     "history": "^3.0.0",
+    "material-ui": "^0.16.5",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-mdl": "^1.6.1",
