--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "fastclick": "^1.0.6",
     "history": "^3.0.0",
     "material-ui": "^0.16.5",
+    "ramda": "^0.22.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-mdl": "^1.6.1",
     "react-redux": "^4.4.5",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.5.2",
     "whatwg-fetch": "^1.0.0"
   },
